objects/ESN_TG_TrendGalaxy__c.object
<CustomObject>
    <description>TrendGalaxy</description>
    <fields>
        <fullName>ESN_TG_Best_of__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Best of</description>
        <label>Best of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrein</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium/Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canary Islands</fullName>
                </value>
                <value>
                    <fullName>Cape Verde Islands</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Ceuta-Melilla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_TG_Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_TG_First_picture__c</fullName>
        <description>First picture</description>
        <label>First picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Key_message__c</fullName>
        <description>Key message</description>
        <label>Key message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Link__c</fullName>
        <description>Link for more sources</description>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Link_type__c</fullName>
        <description>Link type</description>
        <label>Link type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>mobile</fullName>
                </value>
                <value>
                    <fullName>video</fullName>
                </value>
                <value>
                    <fullName>web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_TG_Preview_first_picture__c</fullName>
        <formula>IMAGE( ESN_TG_First_picture__c , &quot;Photo unavailable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview first picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Preview_second_picture__c</fullName>
        <formula>IMAGE(  ESN_TG_Second_picture__c  , &quot;Photo unavailable&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview second picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Emerging markets</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Mature markets</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_TG_Second_picture__c</fullName>
        <description>Second picture</description>
        <label>Second picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Trend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Trend</description>
        <label>TrendGalaxy Trend</label>
        <referenceTo>ESN_TG_TrendGalaxy_Trend__c</referenceTo>
        <relationshipLabel>TrendGalaxy</relationshipLabel>
        <relationshipName>TrendGalaxyTrend</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Graph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_TG_Video__c</fullName>
        <description>Link to youtube/vimeo/dailymotion</description>
        <label>Video</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN_TG_Year__c</fullName>
        <description>Year</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>TrendGalaxy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Galaxy_Chris</fullName>
        <columns>NAME</columns>
        <columns>ESN_TG_Key_message__c</columns>
        <columns>ESN_TG_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Galaxy_Chris</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrendGalaxy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>